[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Mika Ristimaki <mika.ristimaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.20"
reqwest = "0.9.20"
serde_json = "1.0.40"
serde = "1.0.99"
lazy_static = "1.4.0"
array-init = "0.1.0"

[dev-dependencies]
time-test = "0.2.1"
